--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 dependencies {
 	// https://mvnrepository.com/artifact/org.qlrm/qlrm
 	implementation group: 'org.qlrm', name: 'qlrm', version: '4.0.1'
+	implementation group: 'com.auth0', name: 'java-jwt', version: '4.3.0'
 
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
